[package]
name = "staaf-janus"
version = "0.1.0"
authors = ["eater <=@eater.me>"]
edition = "2018"

[lib]
crate_type = ["cdylib"]

[dependencies]
janus-plugin = "0.12.0"
staaf-core = { path = "../staaf-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.58"
discortp = { version = "0.2.1", features = ["demux"] }
janus-plugin-sys = "0.7.0"
# janus already depends on this
# So just * to let janus define the version selector
glib-sys = "*"
