[package]
name = "staaf-janus"
version = "0.1.0"
authors = ["eater <=@eater.me>"]
edition = "2018"

[lib]
crate_type = ["cdylib"]

[dependencies]
janus-plugin = "0.12.0"
staaf-core = { path = "../staaf-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.58"
janus-plugin-sys = "0.7.0"
# janus already depends on this
# So just * to let janus define the version selector
glib-sys = "*"

# threaded rtp handler dependencies
crossbeam-channel = "0.5.0"
bytes = "0.6.0"
dashmap = "3.11.10"
byteorder = "1.3.4"
lazy_static = "1.4.0"
net2 = "0.2.35"